game page optimized for mobile, bugs worked out, added parachute svg logo, menu collapses after clicking link

--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -24,6 +24,9 @@ h3 {
   font-size: 2em;
 }
 
+.icon-parachute:before {
+  content: "\e900";
+}
 /*-----------------HOMEPAGE - MAIN IMAGE AND TITLE------------*/
 .hero {
   background: black url('./images/ourhero.png') top center no-repeat;
@@ -490,3 +493,48 @@ map {
   color: white;
   padding: 5%;
 }
+
+/*Icon Moon Styles*/
+@font-face {
+  font-family: 'icomoon';
+  src:  url('fonts/icomoon.eot?whgmww');
+  src:  url('fonts/icomoon.eot?whgmww#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?whgmww') format('truetype'),
+    url('fonts/icomoon.woff?whgmww') format('woff'),
+    url('fonts/icomoon.svg?whgmww#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  
+  /* Enable Ligatures ================ */
+  letter-spacing: 0;
+  -webkit-font-feature-settings: "liga";
+  -moz-font-feature-settings: "liga=1";
+  -moz-font-feature-settings: "liga";
+  -ms-font-feature-settings: "liga" 1;
+  font-feature-settings: "liga";
+  -webkit-font-variant-ligatures: discretionary-ligatures;
+  font-variant-ligatures: discretionary-ligatures;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-parachute:before {
+  content: "\e900";
+}
+.icon-question:before {
+  content: "\ea09";
+}
+
